fix on input/button on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,11 +22,7 @@ display: -webkit-flex;
 flex-direction: column;
 -webkit-flex-direction: column;
 }
-.email.InputAddOn-item{
-  display:block;
-  clear:left;
-  border-radius: 0;
-}
+
   #background {
     position:fixed;
     top:0;
@@ -116,35 +112,41 @@ flex-direction: column;
 	font-weight: bold;
 	opacity: 1;
 }
-.InputAddOn {
+
+/*.InputAddOn {
 	display: flex;
 	display: -webkit-flex;
 	margin-bottom: 100px;
-}
+}*/
 
 .InputAddOn-field {
 	flex: 1;
 	-webkit-flex: 1;
 	/* field styles */
-	border-radius: 2px 0 0 2px;
+	border-radius: 0;
 	opacity: 0.6;
 	border: none;
 	background-color: white;
-	height: 50px;
+	height: 30px;
+	width: 220px;
 	font-family: 'Roboto', serif;
 	font-weight: 300;
-	text-align: left;
+	text-align: center;
 	color: black;
-	padding-left: 20px;
+	padding: 15px;
 }
 
 .InputAddOn-item {
+	flex: 1;
+	-webkit-flex: 1;
 	/* item styles */
+	border-radius: 0;
 	background-color: #30aa4b;
 	border: none;
 	font-family: 'Roboto', serif;
 	font-weight: 100;
 	padding: 15px;
+	width: 250px;
 }
 
 input:focus::-webkit-input-placeholder { color:transparent; }
@@ -454,7 +456,7 @@ input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */
 
 footer {
 	margin: 0 auto;
-	font-size: 0.6em;
+	font-size: 0.9em;
 }
 #social {
 	text-align: center;
